# Electronic-Trading

./: CMakeLists.txt  Strategy Modeling.ipynb  main.cpp
APP/: AppBase.h  CMakeLists.txt  DataReader.h  MarketSimulator.h  OrderManager.cpp  OrderManager.h  TradingStrategy.cpp  TradingStrategy.h
MyTest/: CMakeLists.txt
MyTest/tests/: CMakeLists.txt  project_test.cpp
OrderBook/: BookUpdate.h  CMakeLists.txt  Order.cpp  Order.h  OrderBook.h
Trading Data/: amzn_1224.csv  amzn_1226.csv  amzn_1227.csv  amzn_1228.csv  amzn_1231.csv
